--- a/signup.html
+++ b/signup.html
@@ -137,7 +137,7 @@
             </div>
             <div class="mb-3">
               <label class="form-label fw-semibold">Phone Number</label>
-              <input id="phone" type="text" name="phone_Number" placeholder="Enter your phone number" class="form-control" maxlength="15" required>
+              <input id="phone" type="number" name="phone_Number" placeholder="Enter your phone number" class="form-control" maxlength="15" required>
             </div>
             <div class="mb-3">
               <label class="form-label fw-semibold">Password</label>
